Updating disclaimer etc.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
     <section id="Programme">
       <h3>Welcome to the Course!</h3>
+	  <p>ExaLAT: Lattice Field Theory at the Exascale Frontier.</p>
       <p><a href = "./src/timetable.html">Timetable and Local Information</a></p>
-      <img class = "plain" src = "img/ARCHER_logo.png" alt = "ARCHER Logo" width = "80%">
+	  
+      <!-- <img class = "plain" src = "img/ARCHER_logo.png" alt = "ARCHER Logo" width = "80%"> -->
     </section>
 
     </div>
