--- a/src/timetable.html
+++ b/src/timetable.html
@@ -37,8 +37,8 @@
       <img class="plain" src = "../img/epcc_logo.png" alt = "EPCC Logo"/>
 
       <p style="font-size: 0.7em">
-      <a href="https://epcced.github.io/archer-gpu-course/">
-               https://epcced.github.io/archer-gpu-course/</a></p>
+      <a href="https://nickaj.github.io/exlat-gpu-course/">
+               https://nickaj.github.io/exlat-gpu-course/</a></p>
 
     </section>
 
@@ -48,7 +48,8 @@
       <p>This is not an ARCHER course</p>
       <p style="font-size: 0.7em">
 	  This course is based upon the ARCHER GPU course as developed by EPCC.</br>
-	  I have added some material on building CG-type solvers as developed by the ExLAT project.</br>
+	  I have added some material on building CG-type solvers as developed by the <a href="https://www.exalat.org">ExaLAT</a> project.</br>
+	  I may also say ExLAT (or use) instead of ExaLAT. This is just sloppy typing on my behalf, I always mean ExaLAT</br>
 	  There may be some residual mentions of ARCHER in the material that I have not removed, but these should not be construed as a link with the ARCHER project.</br>
 	  </p>
 
@@ -57,8 +58,8 @@
     <section>
 
       <p style="font-size: 0.5em"> Clone/fork this presentation at:
-      <a href="https://github.com/EPCCed/archer-gpu-course">
-               https://github.com/EPCCed/archer-gpu-course</a></p>
+      <a href="https://github.com/nickaj/exlat-gpu-course">
+               https://github.com/nickaj/exlat-gpu-course</a></p>
 
       <img class="plain" src="../img/cc_licence.png"
            alt = "Creative Commons Licence"/>
@@ -150,13 +151,13 @@
       <p style = "font-size: 80%" align = "left">
       You need a copy of the exercises:
       <p style = "font-size: 60%" align = "left">
-      <code>$ git clone https://github.com/EPCCed/archer-gpu-course/</code></p>
+      <code>$ git clone https://github.com/nickaj/exlat-gpu-course/</code></p>
 
       <p style = "font-size: 80%" align = "left">
       Once:
       <p style = "font-size: 60%" align = "left">
       <code>$ module load gcc cuda </code><br>
-      <code>$ cd archer-gpu-course/exercises/cuda-intro/src_c</code></p>
+      <code>$ cd exlat-gpu-course/exercises/cuda-intro/src_c</code></p>
 
       <p style = "font-size: 80%" align = "left">
       Edit the file (method of your choice):
