--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       <h3>Welcome to the Course!</h3>
 	  <p>ExaLAT: Lattice Field Theory at the Exascale Frontier.</p>
       <p><a href = "./src/timetable.html">Timetable and Local Information</a></p>
-	  
-      <!-- <img class = "plain" src = "img/ARCHER_logo.png" alt = "ARCHER Logo" width = "80%"> -->
+	  <img class = "plain" src ="../img/epcc_logo.png" alt = "EPCC Logo" />
     </section>
 
     </div>
