--- a/src/exlat.html
+++ b/src/exlat.html
@@ -85,391 +85,156 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
   </section>
 
   <section>
-    <h4> Rest of today's exercises. </h4>
+    <h4> Overarching theme of today's exercises. </h4>
+    <div class="lblock">
+      <img class = "plain" src = "./conjgradfromwikipedia.svg"
+           alt = "Schematic diagram represeting data transfer between
+                  processor and memory. The processor may have one or
+                  more levels of cachme memory."/>
+    </div>
 
+    <div class="rblock">
+      <ol>
+		<li> Basic CG </li>
+        <li> On multiple-GPUs </li>
+		<li> Optimally </li>
+		<li> Remotely </li>
+
+      </ol>
+    </div>
+	
+	</section>
+	
+	  <section>
+    <h4> Overarching theme of today's exercises. </h4>
+    <div class="lblock">
+      <img class = "plain" src = "./conjgradfromwikipedia.svg"
+           alt = "Schematic diagram represeting data transfer between
+                  processor and memory. The processor may have one or
+                  more levels of cachme memory."/>
+    </div>
+
+    <div class="rblock">
+      <ol>
+		<li> Let's break it down into some smaller blocks. </li>
+        <li> We've got some basic building blocks here </li>
+		<li> They are standard mathematical functions which we should be able to do on paper </li>
+		<li> There are 3 different classes of function, what are they? </li>
+
+      </ol>
+    </div>
+	
+	</section>
+
+	
+	<section>
+	<h4> How to begin...</h4>
+	
+	<ul>
+    <li>Let's start with the most basic building blocks</li>
+	<li>If we implement these, we can begin to build up our arsenal of kernels that we can use to construct our vanilla-CG algorithm.</li>
+	</ul>
+	
+	<div class="lblock">
     <ul>
-    <li> Use what you've been taught already to implement:
-    <ul class = "inner">
-        <li> Basic CG (ie, the vanilla one from wikipedia)</li>
-        <li> One multiple-GPUs</li>
-		<li> And optimise it</li>
+       <li> Vector something Vector
+		<ul>
+			<li> Scale by a value </li>
+			<li> Add / Subtract </li>
+			<li> Vector Product </li>
+			<li> Transpose </li>
+	   </ul>
+	   </li>
+   </ul>
+   </div>
+   
+	<div class="rblock">
+	<ul>	
+       <li> Matrix-Vector</li>
+	   
+       <li> Single value computation
+	   <ul>
+			<li> Reduction </li>
+			<li> Max/Min </li>
+		</ul>
+	   </li>
     </ul>
-    <li> Simply must avoid unnecessary copies </li>
-    <ul class = "inner">
-       <li> Keep data resident on device</li>
-       <li> May involve moving all relevant code to device</li>
-       <li> Recalculation / extra computation instead of data communication
-    </ul>
+	</div>
+	
+	
+	
     <!-- note Device Memory allocation can also be expensive -->
-    </ul>
-  </section>
-
-  <section>
-    <h4> Removing data transfer </h4>
-
-    <dl style = "font-size: 80%">
-
-    <dt> Consider a common pattern: </dt>
-
-    <pre><code class = "cpp" data-trim>
-for (it = 0; it < nTimeSteps; it++) {
-  myCheapHostOperation(hostData);
-  cudaMemcpy(..., cudaMemcpyHostToDevice);
-  myExpensiveKernel &lt&lt&lt...&gt&gt&gt (deviceData, ...);
-  cudaMemcpy(..., cudaMemcpyDeviceToHost);
-}
-    </code></pre>
-
-   <dt> Must be refactored to: </dt>
-
-   <pre><code class = "cpp" data-trim>
-cudaMemcpy(..., cudaMemcpyHostToDevice);
-
-for (it = 0; it < nTimeSteps; it++) {
-  myCheapKernel &lt&lt&lt ... &gt&gt&gt (deviceData, ...);
-  myExpensiveKernel &lt&lt&lt ... &gt&gt&gt (deviceData, ...)
-}
-
-cudeMemcpy(..., cudaMemcpyDeviceToHost);
-   </code></pre>
-    </dl>
-  </section>
-
-  <section>
-    <h4> Occupancy and latency hiding </h4>
-
-    <ul>
-      <li> Work decomposed and distributed between threads </li>
-      <ul class = "inner">
-        <li> Suggests may want as many threads as there are cores
-        <li> ...or some cores will be left idle
-      </ul>
-      <li> Actually want $$ N_{threads} >> N_{cores}$$
-      <br>
-      <li> Latency for access to main memory
-      <ul class = "inner">
-        <li> Perhaps 100 clock cycles
-        <li> If other threads are available, can be swapped in quickly
-      </ul>
-
-    </ul>
-  </section>
-
-  <section>
-    <h4> Example </h4>
-
-     <dl>
-       <dt> Suppose we have a two-dimensional loop </dt>
-     </dl>
-     <pre><code class = "cpp" data-trim>
-for (i = 0; i < 512; i++) {
-  for (j = 0; j < 512; j++) {
-    /* ... work ... */
-     </code></pre>
-
-     <dl>
-       <dt> Parallelise inner loop only </dt>
-       <ul class = "inner">
-         <li> Can use 512 threads
-         <li> Poor occupancy!
-       </ul>
-     </dl>
-
-     <dl>
-       <dt> Parallelise both loops </dt>
-       <ul class = "inner">
-         <li> Can use $512 \times 512 = 262,\!144$ threads
-         <li> Much better!
-       </ul>
-     </dl>
-
-
-  </section>
-
-  <section>
-    <h4> CPU Caching </h4>
-
-
-    <pre><code class = "cpp">
-/* C: recall right-most index runs fastest */
-for (i = 0; i < NI; i++) {
-  for (j = 0; j < NJ; j++) {
-    output[i][j] = input[i][j];
-  }
-}
-    </code></pre>
-
-    <pre><code class = "fortran" data-trim>
-! Fortran: recall left-most index runs fastest
-do j = 1, NJ
-  do i = 1, NI
-    output(i,j) = input(i,j)
-  end do
-end do
-    </code></pre>
-
-    <dl style = "font-size: 80%">
-      <dt> Individual thread has consecutive memory accesses </dt>
-    </dl>
-
-  </section>
-
-  <section>
-    <h4> Memory coalescing </h4>
-
-    <ul>
-      <li> GPUs have a high <i>peak</i> memory bandwidth </li>
-      <ul class = "inner">
-        <li> But only achieved when accesses are <i> coalesced</i>
-        <li> That is, when:
-      </ul>
-
-      <p style = "text-align: center">
-      consecutive threads access consecutive memory locations
-      </p>
-
-      <li> If not, access may be serialised
-      <ul class = "inner">
-        <li> Performance disaster
-        <li> Need to refactor to allow coalescing
-      </ul>
+	</section>
+	
+	<section>
+	<h4> Some planning will help a lot</h4>
+	<ul>
+	<li> Things to think about:
+    <ul class = "inner">
+       <li> How are you going to move data around?</li>
+       <li> How are you going to determine if the answer is correct?</li>
+       <li> How are you going to profile it?</li>
     </ul>
 
-  </section>
+	<li> Reductions </li>
+    <ul class = "inner">
+       <li> What happens in the first step of a matrix-vector? </li>
+       <li> Does it matter what type of memory you use to hold the results?</li>
+	   <li> Can CUDA help us with this?</li>
+    </ul>
+	</ul>
+	</section>
+	
+	<section>
+	<h4> AtomicAdd </h4>
+	
 
-  <section>
-    <h4> So, what is the correct order? </h4>
+    <ul class = "inner">
+	<li>What does the below do on the GPU?</li>
+	<li>How does each thread (recall they operate roughly in lockstep) know which value of temp it is reading</li>
+	<li>Worse how does any thread know when to write, or what to write?</li>
+	
+    </ul>
+	
+    <p>
+    <pre class = "stretch"><code class = "cpp" data-trim>
+    __shared__ int temp;
+    __shared__ int tempa[THREADS_PER_BLOCK];
+	v_idx = threadIdx.x;
+	for (int i = 0; i < v_idx; i++){
+		temp += tempa[i];
+	}
+	
+    </code></pre></p>
+	</section>
+	
+	<section>
+	<h4> AtomicAdd </h4>
 
+    <ul class = "inner">
+	<li>Enter, your new best friend, AtomicAdd...</li>
+	<li>Forces the threads to behave sensibly by adding their component in order</li>
+	<li>Probably not the fastest method to do this, but it is a CUDA function, so likely to be as fast as possible
+    </ul>
 
-    <dl style = "font-size: 80%">
-      <dt> In one dimension, the picture is relatively simple </dt>
-      <ul class = "inner">
-        <li> <code>threadsPerBlock = (nThreads, 1, 1) </code></li>
-        <li> Consective threads are those with consective index </li>
-      </ul>
-    </dl>    
+    <p>
+    <pre class = "stretch"><code class = "cpp" data-trim>
+	v_idx = threadIdx.x;
+	atomicAdd(&temp, tempa[v_idx]);
+    </code></pre></p>
+	
+	</section>
 
-    <pre><code class = "cpp">
-/* In C: */
-idx = blockIdx.x*blockDim.x + threadIdx.x;
-output[idx] = input[idx];
-      </code></pre>
-      <pre><code class = "fortran" data-trim>
-! In Fortran:
-idx = (blockIdx%x - 1)*blockDim%x + threadIdx%x
-output(idx) = input(idx)
-      </code></pre>
+<!--  
+	<section>
+	Going parallel
+	
+	We now have two building blocks, matrix-vector and vector-vector (or vector transpose, or other vectory things)<br>
+	How do we make use of > 1 GPU?
+	
+	</section>
 
-      <dl style = "font-size: 80%">
-        <dt>Both good; accesses are coalesced. </dt>
-      </dl>
-  </section>
-
-
-  <section>
-    <h4> Two-dimensional array: C </h4>
-
-    <dl style = "font-size: 80%">
-      <dt> Recall: right-most index runs fastest </dt>
-    </dl>    
-
-    <pre><code class = "cpp">
-/* Bad: consecutive threads have strided access */
-i = blockIdx.x*blockDim.x + threadIdx.x;
-for (j = 0; j < NJ; j++) {
-  output[i][j] = input[i][j];
-}
-    </code></pre>
-
-    <pre><code class = "cpp" data-trim>
-/* Good: consecutive threads have contiguous access */
-j = blockIdx.x*blockDim.x + threadIdx.x;
-for (i = 0; i < NI; i++) {
-  output[i][j] = input[i][j];
-}
-    </code></pre>
-
-  </section>
-
-  <section>
-    <h4> Two-dimensional array: Fortran </h4>
-
-    <dl style = "font-size: 80%">
-      <dt> Recall: left-most index runs fastest </dt>
-    </dl>    
-
-    <pre><code class = "fortran">
-! Bad: consecutive threads have strided access
-j = blockIdx.x*blockDim.x + threadIdx.x;
-do i = 1,  NI
-  output(i, j) = input(i, j);
-end do
-    </code></pre>
-
-    <pre><code class = "fortran" data-trim>
-! Good: consecutive threads have contiguous access
-i = blockIdx.x*blockDim.x + threadIdx.x;
-do j = 1, NJ
-  output(i, j) = input(i, j);
-end do
-    </code></pre>
-
-  </section>
-
-  <section>
-    <h4> Two-dimensional decomposition </h4>
-
-    <dl style = "font-size: 80%">
-      <dt> More complex </dt>
-      <ul class = "inner">
-        <li> <code> blocksPerGrid = (nBlocksX, nBlocksY, 1) </code>
-        <li> <code> threadsPerBlock = (nThreadsX, nThreadsY, 1) </code>
-        <li> x counts fastest, then y (and then z, in three dimensions)
-      </ul>
-    </dl>
-
-    <pre><code class = "cpp">
-/* C: note apparent transposition of i, j here... */
-int j = blockIdx.x*blockDim.x + threadIdx.x;
-int i = blockIdx.y*blockDim.y + threadIdx.y;
-
-output[i][j] = input[i][j];
-    </code></pre>
-
-    <pre><code class = "fortran" data-trim>
-! Fortran: looks more natural
-i = (blockIdx%x - 1)*blockDim%x + threadIdx%x
-j = (blockIdx%y - 1)*blockDim%y + threadIdx%y
-
-output(i, j) = input(i, j)
-    </code></pre>
-  </section>
-
-  <section>
-    <h4> Code branching </h4>
-
-
-    <dl style = "font-size: 80%">
-      <dt> Threads are scheduled in groups of 32 </dt>
-      <ul class = "inner">
-        <li> Share same instruction scheduling hardware units
-        <li> A group is referred to as a <i>warp</i>
-        <li> Warp executes instructions in lock-step (SIMT)
-      </ul>
-      <dt> Branches in the code can cause serialisation </dt>
-      <ul class = "inner">
-         <li> All threads execute all branches
-         <li> Throw away irrelevant results
-      </ul>
-    </dl>
-
-  </section>
-
-  <section>
-     <h4> Avoiding warp divergence </h4>
-
-    <dl style = "font-size: 80%">
-      <dt> Imagine want to split threads into two groups: </dt>
-    </dl>
-    <pre><code class = "cpp">
-/* Bad: threads in same warp diverge... */
-
-tid = blockIdx.x*blockDim.x + threadIdx.x;
-
-if (tid % 2 == 0) {
-  /* Threads 0, 2, 4, ... do one thing ... */
-}
-else {
-  /* Threads 1, 3, 5, ... do something else */
-}
-    </code></pre>
-  </section>
-
-  <section>
-    <h4> Avoiding warp divergence </h4>
-
-    <pre><code class = "cpp" data-trim>
-
-/* Good: threads in same warp follow same path ...
- * Note use of the internal variable "warpSize" */
-
-tid = blockIdx.x*blockDim.x + threadIdx.x;
-
-if ( (tid / warpSize) % 2 == 0) {
-  /* Threads 0, 1, 2, 3, 4, ... do one thing ... */
-}
-else {
-  /* Threads 32, 33, 34, 35,  ... do something else */
-}
-    </code></pre>
-
-  </section>
-
-  <section>
-    <h4> Performance Problem? </h4>
-
-    <dl style = "font-size: 80%">
-      <dt> Compiler can help to prevent problems </dt>
-    </dl>
-    <pre><code class = "bash">
-$ nvcc -Xptxas -v ...
-    </code></pre>
-    <dl style = "font-size: 80%">
-      <dt> Verbose option for PTX stage</dt>
-      <ul class = "inner">
-        <li> Parallel Thread Execution assembler (an intermediate form)
-        <li> Reports register usage, constant/shared memory usage in kernels
-        <li> Reports spills to global memory (very harmful to performance)
-        <li> Use iteratively during development
-      </ul>
-    </dl>
-    
-
-  </section>
-
-  <section>
-    <h4> Profiling CUDA code </h4>
-
-    <dl style = "font-size: 80%">
-      <dt> Command-line profiler <code>nvprof</code> </dt>
-      <ul class = "inner">
-        <li> Provides traditional text profile report
-      </ul>
-    </dl>
-    <pre><code class = "bash">
-$ nvprof ./cudaExecutable
-    </code></pre>
-
-    <dl style = "font-size: 80%">
-      <dt> NVIDIAVisual profiler </dt>
-      <ul class = "inner">
-        <li> Full GUI profiler with many features
-        <li>
-    <a target = "_blank"
-       href = "http://docs.nvidia.com/cuda/profiler-users-guide/index.html">
-               http://docs.nvidia.com/cuda/profiler-users-guide/index.html</a>
-      </ul>
-    </dl>
-
-  </section>
-
-  <section>
-    <h4> Summary </h4>
-
-    <dl style = "font-size: 80%">
-      <dt> With care, a good fraction of peak performance is possible </dt>
-      <ul class = "inner">
-        <li> Can be quite difficult on CPU </li>
-      </ul>
-      <dt> Not all problems well suited </dt>
-      <ul class = "inner">
-        <li> Often just not enough parallelism
-      </ul>
-    </dl>
-
-
-
-  </section>
+  -->
 
 </div>
 </div>
