--- a/src/timetable.html
+++ b/src/timetable.html
@@ -99,15 +99,16 @@
       <dt>11:20 <a href = "./cuda-programming.html">CUDA Programming</a> </dt>
       <dt>12:00 <a href = "#exercise-location">
                 A first CUDA exercise</a></dt>
-      <dt>13:00 Lunch </dt>
+      <dt>12:30 Lunch </dt>
       <dt><br> </dt>
+	  <dt>13:30 Exercise contiued (or a longer lunch break if you need it)</dt>
       <dt>14:00 <a href = "optimisation.html">CUDA Optimisations</a></dt>
       <dt>14:20 <a href = "#/exercise-location">
                           Optimisation Exercise</a> </dt>
       <dt>15:00 Break</dt>
       <dt>15:20 <a href = "./cuda-memory.html">More on Memory</a></dt>
-      <dt>16:00 <a href = "#exercise-location">Exercises</a>
-      <dt>17:00 Close
+      <dt>16:00 <a href = "#exercise-location">Exercises</a> </dt>
+      <dt>17:00 Close</dt>
     </dl>
     </section>
 
@@ -116,16 +117,19 @@
     <h4>Timetable Day Two</h4>
 
     <dl style = "font-size: 70%">
-		<dt>10:00 Recap/Warmup</a></dt>
-		<dt>10:10 <a href = "./exlat.html">ExLAT</a> exercise introduction	</dt>
+		<dt>10:00 Recap & Warmup</a></dt>
+		<dt>10:10 <a href = "./exlat.html">ExLAT</a> exercise introduction and discussion</dt>
+		<dt>10:30 <a href = "#exercise-location">Exercise time </a></dt>
 		<dt>11:00 Break</dt>
-		<dt>11:20 ... ExLAT exercise and talks continued</dt>
-		<dt>13:00 Lunch </dt>
+		<dt>11:20 <a href = "./exlat2.html">ExLAT2</a> :multi-GPU methods</dt>
+		<dt>11:40 Exercise continuation / multi-GPU exercises</dt>
+		<dt>12:30 Lunch </dt>
 		<dt> <br> </dt>
+		<dt>13:30 Continue <a href = "#exercise-location">exercises</a> (single/multi-GPU) (or longer lunch if you require it) </dt>
 		<dt>14:00  <a href = "./opencl.html">OpenCL</a> and <a href = "./directives.html">OpenACC Directives</a>        </dt>
 		<dt>15:00 Break</dt>
 		<dt>15:15 OpenCL and / or Directives <a href = "#/exercise-location"> Exercises</a>  </dt>
-		<dt> 16:00 Close
+		<dt> 16:00 Close </dt>
     </dl>
 	
 	
