--- a/src/timetable.html
+++ b/src/timetable.html
@@ -45,12 +45,9 @@
     <section>
 
       <h1>Disclaimer</h1>
-      <p>This is not an ARCHER course</p>
       <p style="font-size: 0.7em">
-	  This course is based upon the ARCHER GPU course as developed by EPCC.</br>
-	  I have added some material on building CG-type solvers as developed by the <a href="https://www.exalat.org">ExaLAT</a> project.</br>
-	  I may also say ExLAT (or use) instead of ExaLAT. This is just sloppy typing on my behalf, I always mean ExaLAT</br>
-	  There may be some residual mentions of ARCHER in the material that I have not removed, but these should not be construed as a link with the ARCHER project.</br>
+	  Part of this course is based upon the ARCHER GPU course as developed by EPCC.</br>
+	  I have added some material and an exercise on building a CG solver as part of the <a href="https://www.exalat.org">ExaLAT</a> project.
 	  </p>
 
     </section>
