--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	  <p>ExaLAT: Lattice Field Theory at the Exascale Frontier.</p>
       <p><a href = "./src/timetable.html">Timetable and Local Information</a></p>
 	  <img class = "plain" src ="img/epcc_logo.png" alt = "EPCC Logo" /><br>
-	  <img class = "plain" src ="img/exalat-logo.png" alt = "ExaLAT Logo" />
+	  <img class = "plain" src ="img/exalat-logo-sml.png" alt = "ExaLAT Logo" />
     </section>
 
     </div>
