--- a/src/timetable.html
+++ b/src/timetable.html
@@ -34,6 +34,9 @@
       <p>Nick Johnson<br/>
       <a href="mailto:n.johnson@epcc.ed.ac.uk"> n.johnson@epcc.ed.ac.uk</a>
       </p>
+	  <p>Kevin Stratford<br/>
+      <a href="mailto:k.stratford@epcc.ed.ac.uk"> k.stratford@epcc.ed.ac.uk</a>
+      </p>
       <img class="plain" src = "../img/epcc_logo.png" alt = "EPCC Logo"/>
 
       <p style="font-size: 0.7em">
@@ -48,7 +51,9 @@
       <p style="font-size: 0.7em">
 	  Part of this course is based upon the ARCHER GPU course as developed by EPCC.</br>
 	  I have added some material and an exercise on building a CG solver as part of the <a href="https://www.exalat.org">ExaLAT</a> project.
+	  ExaLat is funded by UKRI under grants: EP/V001329/1, EP/V001191/1, EP/V001477/1, EP/V001248/1, EP/V001140/1
 	  </p>
+	  <img class = "plain" src ="img/exalat-logo-sml.png" alt = "ExaLAT Logo" />
 
     </section>
 
