--- a/src/exlat.html
+++ b/src/exlat.html
@@ -250,8 +250,8 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 	<section>
 	<h4> Exercise time </h4>
 	<ul class=outer">
-	<li>You can find these exercise in the usual place, under exalat1</li>
-	<li>My full (ie with MV and V.V) implemented is in the solutions directory</li>
+	<li>You can find this exercise in the usual place, under single</li>
+	<li>My full (ie with MV and V.V) implemented is in the single-solution directory</li>
 	<li>Try the following pieces of exercise:</li>
 
 		
