--- a/src/timetable.html
+++ b/src/timetable.html
@@ -47,13 +47,13 @@
 
     <section>
 
-      <h1>Disclaimer</h1>
+      <h1>Notice</h1>
       <p style="font-size: 0.7em">
 	  Part of this course is based upon the ARCHER GPU course as developed by EPCC.</br>
-	  I have added some material and an exercise on building a CG solver as part of the <a href="https://www.exalat.org">ExaLAT</a> project.
+	  I have added some material and an exercise on building a CG solver as part of the <a href="https://www.exalat.org">ExaLAT</a> project.</br>
 	  ExaLat is funded by UKRI under grants: EP/V001329/1, EP/V001191/1, EP/V001477/1, EP/V001248/1, EP/V001140/1
 	  </p>
-	  <img class = "plain" src ="img/exalat-logo-sml.png" alt = "ExaLAT Logo" />
+	  <img class = "plain" src ="../img/exalat-logo-sml.png" alt = "ExaLAT Logo" />
 
     </section>
 
@@ -120,14 +120,14 @@
 
     <dl style = "font-size: 70%">
 		<dt>10:00 Recap & Warmup</a></dt>
-		<dt>10:10 <a href = "./exlat.html">ExLAT</a> exercise introduction and discussion</dt>
+		<dt>10:10 <a href = "./exlat.html">ExaLAT</a>: exercise introduction and discussion</dt>
 		<dt>10:30 <a href = "#exercise-location">Exercise time </a></dt>
 		<dt>11:00 Break</dt>
-		<dt>11:20 <a href = "./exlat2.html">ExLAT2</a> :multi-GPU methods</dt>
-		<dt>11:40 Exercise continuation / multi-GPU exercises</dt>
+		<dt>11:20 <a href = "./exlat2.html">ExaLAT</a>: multi-GPU methods</dt>
+		<dt>11:40 <a href = "#exercise-location">Exercise continuation / multi-GPU exercise</a></dt>
 		<dt>12:30 Lunch </dt>
 		<dt> <br> </dt>
-		<dt>13:30 Continue <a href = "#exercise-location">exercises</a> (single/multi-GPU) (or longer lunch if you require it) </dt>
+		<dt>13:30 Continue <a href = "#exercise-location">exercises</a> (single/multi-GPU)</dt>
 		<dt>14:00  <a href = "./opencl.html">OpenCL</a> and <a href = "./directives.html">OpenACC Directives</a>        </dt>
 		<dt>15:00 Break</dt>
 		<dt>15:15 OpenCL and / or Directives <a href = "#/exercise-location"> Exercises</a>  </dt>
